# MarketTradingSimulator

./: CMakeLists.txt
src/: bbo.cpp  bbo.h  candle.cpp  candle.h  main.cpp  simulator.cpp  simulator.h  strategy.cpp  strategy.h  trade.cpp  trade.h
